--- a/LetsHang/letshang/letshang/templates/_footer.html
+++ b/LetsHang/letshang/letshang/templates/_footer.html
@@ -2,6 +2,8 @@
 
 {% now "Y" as current_year %}
 
-{% blocktrans %}
+{% blocktrans %}<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class="copyright">&copy; {{ current_year }} &lt;LetsHang&gt;</div>
 {% endblocktrans %}
