--- a/LetsHang/letshang/letshang/templates/homepage.html
+++ b/LetsHang/letshang/letshang/templates/homepage.html
@@ -8,6 +8,9 @@
 
 {% block body_base %}
 <main>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <section class="jumbotron">
         <div class="container">
             {% include "_messages.html" %}
@@ -15,7 +18,10 @@
             {% if not user.is_authenticated %}
             {% url "account_login" as login_url %}
             {% url "account_signup" as signup_url %}
-            <p>{% blocktrans %}You can <a href="{{ login_url }}" class="btn btn-secondary">Log In</a> or <a href="{{ signup_url }}" class="btn btn-primary">Sign Up</a> to try out the site.{% endblocktrans %}</p>
+            <p>{% blocktrans %}You can <a href="{{ login_url }}" class="btn btn-primary">Log In</a> or <a href="{{ signup_url }}" class="btn btn-primary">Sign Up</a> to try out the site.{% endblocktrans %}</p>
+            {% endif %}
+            {% if user.is_authenticated %}
+              <a href="/selection/" class="btn btn-info" role="button">Let's Hang Out!</a>
             {% endif %}
         </div>
     </section>
