--- a/LetsHang/letshang/selection/templates/selection/choice.html
+++ b/LetsHang/letshang/selection/templates/selection/choice.html
@@ -11,9 +11,9 @@
   <body>
   <section class="jumbotron">
   <div class="container">
-    <h1 class="center-align" >You chose to {{choice}}<br><br>Wait for a match...</h1>
+    <h1 class="center-align" >You chose to {{choice}}<br><br>There is no one to match with. Please try again!</h1>
     <!--<h2><br>Refresh the page every few seconds.</h2>-->
-    <a href="/selection/{{choice_id}}/match/" class="btn btn-info" role="button">.</a>
+    <a href="/" class="btn btn-info" role="button">Go back home</a>
 
   </div>
   </section>
