--- a/LetsHang/letshang/letshang/templates/homepage.html
+++ b/LetsHang/letshang/letshang/templates/homepage.html
@@ -22,6 +22,7 @@
             {% endif %}
             {% if user.is_authenticated %}
               <a href="/selection/" class="btn btn-info" role="button">Let's Hang Out!</a>
+              <a href="/profile/" class="btn btn-info" role="button">Edit Profile</a>
             {% endif %}
         </div>
     </section>
