--- a/LetsHang/letshang/letshang/templates/letshang/profile.html
+++ b/LetsHang/letshang/letshang/templates/letshang/profile.html
@@ -1,8 +1,14 @@
-<!doctype html>
+{% extends "site_base.html" %}
+{% load i18n %}
+
+{% block head_title %}LetsHang{% endblock %}
+
+{% block body_class %}home{% endblock %}
+
+{% block body_base %}
 <html>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <section class="jumbotron">
 <body>
 <form action="{% url "profile" %}" method="post"
@@ -20,3 +26,4 @@
 </body>
 </section>
 </html>
+{% endblock %}
